# purring-cat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
docs/: hvml-agent-before-V1.0.pptx  setup-dev-env-using-docker-en.md  setup-dev-env-using-docker.md
hvml-agent/: HttpEcho.cpp  HttpEcho.h  HttpServer.cpp  HttpServer.h  HvmlEcho.cpp  HvmlEcho.h  HvmlRuntime.cpp  HvmlRuntime.h  MyInfo.cpp  MyInfo.h  README.md  copy-so.sh  gen-make.sh  hvml-agent.cpp  hvml-agent.mpc  re-make.sh  run-test.sh
hvml-agent/index/: calculator.hvml
hvml-agent/test/: calculator.hvml
include/hvml/: hvml_dom.h  hvml_interpreter.h  hvml_jdo.h  hvml_je.h  hvml_jo.h  hvml_json_parser.h  hvml_list.h  hvml_log.h  hvml_parser.h  hvml_printf.h  hvml_string.h  hvml_utf8.h
include/interpreter/: adverb_property.h  ext_tools.h  interpreter_basic.h  interpreter_runtime.h  interpreter_to_three_part.h  interpreter_two_part.h  observe_for.h  str_tools.h
interpreter/src/: CMakeLists.txt  adverb_property.c  ext_tools.c  interpreter_basic.cpp  interpreter_runtime.cpp  interpreter_to_three_part.cpp  interpreter_two_part.cpp  main.c  observe_for.c  str_tools.cpp
json-eval/src/: CMakeLists.txt  hvml_je_parser.y  hvml_je_scanner.l
json-objects/: CMakeLists.txt
json-objects/src/: CMakeLists.txt  hvml_jo.c
parser/: .gitignore  CMakeLists.txt  README.md  main.c
parser/inc/: hvml_json_parser.h  hvml_log.h  hvml_parser.h
parser/src/: CMakeLists.txt  hvml_dom.c  hvml_dom_printf.c  hvml_dom_xpath_parser.c  hvml_dom_xpath_parser.h  hvml_dom_xpath_parser.y  hvml_dom_xpath_qry.cpp  hvml_dom_xpath_scanner.l  hvml_jo.c  hvml_jo_printf.c  hvml_json_parser.c  hvml_log.c  hvml_parser.c  hvml_parser.c.d  hvml_printf.c  hvml_string.c  hvml_utf8.c  xpath.g4  xpathDomVisitor.cpp  xpathDomVisitor.h
parser/test/: sample.hvml
test/: CMakeLists.txt
test/interpreter/: CMakeLists.txt  main.cpp
test/parser/: CMakeLists.txt  main.c
test/parser/test/: 1.hvml.output  1.xpath  1.xpath.hvml  1.xpath.hvml.output  1.xpath.output  2.hvml.output  2.xpath  2.xpath.hvml  2.xpath.hvml.output  2.xpath.output  3.hvml.output  4.hvml.output  5.hvml  5.hvml.output  6.hvml.output  calc.hvml  je.jee  numbers.json  numbers.json.output  sample.hvml  sample.hvml.output  sample.json  sample.json.output  unicode.json  unicode.json.output  unicode.utf8
